<?xml version="1.0"?>
<package format="2">
    <name>sky_mission</name>
    <version>0.1.0</version>
    <description>brief description of the competition</description>

    <maintainer email="hfcaio@gmail.com">Caio H. Freitas</maintainer>
    <author email="hfcaio@gmail.com">Caio H. Freitas</author>


    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>MIT</license>


    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/obstacle-avoidance</url> -->


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>mavros</build_depend>
    <build_depend>mavros_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>mavros</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>mavros</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <export>
    </export>
</package>